# rust-lorem-ipsum

./: Cargo.toml  README.md
src/: lorem_ipsum.rs  main.rs
