[package]
name = "lorem-ipsum"
version = "0.1.1"
edition = "2021"
authors = [ "Oakchris1955" ]
description = "Quickly generate placeholder test"
repository = "https://github.com/Oakchris1955/rust-lorem-ipsum.git"
license = "MIT"
publish = true

exclude = [
    "/.vscode"
]

[dependencies]
clap = { version = "4.5.3", features = [ "derive" ] }
rand = { version = "0.8.5", features = [ "alloc" ] }
regex = "1.10.3"
